2009-08-27  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* NSArray+NGCards.m (-renderedForCards): empty values are not
	returned, so as to avoid rendering attributes that do not have a
	value.

	* CardVersitRenderer.m (-renderElement:): we avoid outputting
	attribute keys if no non-empty value has been returned.

2009-07-17  Cyril Robert <crobert@inverse.ca>

	* iCalPerson.m: Lowercased MAILTO to make it work with iCal.

2009-04-21  Francis Lachapelle  <flachapelle@inverse.ca>

	* iCalTrigger.m ([iCalTrigger -setRelationType:]): new method to
	set the "related" attribute of an alarm trigger.

	* NSString+NGCards.m ([NSString -durationAsTimeInterval]): added
	support of negative durations.

2009-03-24  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* iCalWeeklyRecurrenceCalculator.m
	([iCalWeeklyRecurrenceCalculator
	-recurrenceRangesWithinCalendarDateRange:_r]): same as below.

	* iCalDailyRecurrenceCalculator.m ([iCalDailyRecurrenceCalculator
	-recurrenceRangesWithinCalendarDateRange:_r]): autorelease
	currentStartDate when instantiated from a copy of firDate, to
	avoid a leak.

2009-03-18  Francis Lachapelle  <flachapelle@inverse.ca>

	* iCalDateTime.m ([iCalDateTime -dateTime]): when not defined, the
	timezone is now guessed from the date of the current object.

2009-02-06  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* CardElement.m ([CardElement -setParent:aParent]): no longer
	retain the parent passed as parameter.

2008-12-10  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* iCalYearlyRecurrenceCalculator.m
	([iCalYearlyRecurrenceCalculator -lastInstanceStartDate]): same as
	below.

	* iCalMonthlyRecurrenceCalculator.m
	([iCalMonthlyRecurrenceCalculator -lastInstanceStartDate]): same
	as below.

	* iCalWeeklyRecurrenceCalculator.m
	([iCalWeeklyRecurrenceCalculator -lastInstanceStartDate]): same as
	below.

	* iCalDailyRecurrenceCalculator.m ([iCalDailyRecurrenceCalculator
	-lastInstanceStartDate]): return a date based on the start date,